@@ -6,5 +6,5 @@ This example represents a message in case no transmissions were performed within
 
 [source, xml]
 ----
-include::../../../../trn-transaction_statistics/example/transaction-statistics-empty.xml[]
+include::../../../../trn-transaction_statistics/example/transaction-statistics-appendix2.xml[]
 ----
