@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
+<TransactionStatisticsReport xmlns="urn:fdc:peppol:transaction-statistics-report:1.0">
+  <CustomizationID>urn:fdc:peppol.eu:edec:trns:transaction-statistics-reporting:1.0</CustomizationID>
+  <ProfileID>urn:fdc:peppol.eu:edec:bis:reporting:1.0</ProfileID>
+  <Header>
+    <ReportPeriod>
+      <StartDate>2023-12-01</StartDate>
+      <EndDate>2023-12-31</EndDate>
+    </ReportPeriod>
+    <ReporterID schemeID="CertSubjectCN">POP000360</ReporterID>
+  </Header>
+
+  <!-- Totals -->
+  <Total>
+    <Incoming>0</Incoming>
+    <Outgoing>0</Outgoing>
+  </Total>
+  
+  <!-- No Subtotal because they would all contain only zeroes -->
+</TransactionStatisticsReport>
